--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-div.histo {
+.histo {
+    display: flex;
+    flex-flow: column;
     width: 100%;
     height: 20em;
-    background: #eee;
+    background-color: #eee;
+    padding: 0.5em;
+}
+
+.bar {
+    height: 1em;
+    margin: 0.5em 0;
+    background-color: red;
 }
