--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,12 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 .histo {
     display: flex;
     flex-flow: column;
