--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 * {
@@ -18,6 +19,7 @@ html, body {
 
 .dept {
     display: flex;
+    align-items: center;
     height: 1em;
     margin: 0.2em 0;
 }
@@ -30,4 +32,9 @@ html, body {
     width: 0;
     height: 1em;
     background-color: red;
+}
+
+.nbr-accident {
+    margin: 0 0.2em;
+    font-size: 0.7em;
 }
